# learn-drf

./: main.py  pyproject.toml  requirements.txt
blogapi/: pyproject.toml  requirements.txt
blogapi/accounts/: admin.py  forms.py  models.py
blogapi/accounts/migrations/: 0001_initial.py
blogapi/django_project/: settings.py  urls.py
blogapi/posts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
blogapi/posts/migrations/: 0001_initial.py
intro/: db.sqlite3
intro/intro/: settings.py  urls.py  views.py
todo/backend/: pyproject.toml  requirements.txt
todo/backend/django_project/: settings.py
todo/backend/todos/: admin.py  serializers.py  tests.py
todo/backend/todos/migrations/: 0001_initial.py
todo/frontend/: README.md  index.html
